VC-24 Fix compilation errors
+ fix errors